--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-currency-input": "^1.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-pager-view": "5.0.12",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
