--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.26.1",
     "date-fns": "^2.23.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
@@ -21,10 +22,12 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-currency-input": "^1.0.1",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-pager-view": "5.0.12",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-swiper-flatlist": "^3.0.15",
