--- a/package.json
+++ b/package.json
@@ -8,37 +8,37 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "3.5.2",
-    "@react-native-picker/picker": "1.16.1",
+    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.26.1",
     "date-fns": "^2.23.0",
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^45.0.0",
+    "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-currency-input": "^1.0.1",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-pager-view": "5.0.12",
+    "react-native-pager-view": "5.4.15",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-swiper-flatlist": "^3.0.15",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
